--- a/GitHub_test/Base.lproj/Main.storyboard
+++ b/GitHub_test/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,47 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GitHub_test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="S4I-mx-jjk">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Lc-ux-Dlv">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="440.33333333333331"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ps9-Xh-zDn">
+                                        <rect key="frame" x="0.0" y="440.33333333333326" width="375" height="293.66666666666674"/>
+                                        <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="0Lc-ux-Dlv" firstAttribute="height" secondItem="S4I-mx-jjk" secondAttribute="height" multiplier="0.6" id="70O-Qt-qwD"/>
+                                    <constraint firstAttribute="bottom" secondItem="ps9-Xh-zDn" secondAttribute="bottom" id="GjZ-IU-S8d"/>
+                                    <constraint firstItem="0Lc-ux-Dlv" firstAttribute="top" secondItem="S4I-mx-jjk" secondAttribute="top" id="THM-ee-jXX"/>
+                                    <constraint firstItem="ps9-Xh-zDn" firstAttribute="leading" secondItem="S4I-mx-jjk" secondAttribute="leading" id="YlQ-eb-4lb"/>
+                                    <constraint firstAttribute="trailing" secondItem="ps9-Xh-zDn" secondAttribute="trailing" id="Zh3-4C-PsI"/>
+                                    <constraint firstAttribute="trailing" secondItem="0Lc-ux-Dlv" secondAttribute="trailing" id="fsU-j9-9wF"/>
+                                    <constraint firstItem="0Lc-ux-Dlv" firstAttribute="leading" secondItem="S4I-mx-jjk" secondAttribute="leading" id="gbn-cz-GYR"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="S4I-mx-jjk" secondAttribute="trailing" id="5GB-CP-jZB"/>
+                            <constraint firstItem="S4I-mx-jjk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="OaI-6Y-FPj"/>
+                            <constraint firstItem="S4I-mx-jjk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="nlP-rb-pHP"/>
+                            <constraint firstItem="S4I-mx-jjk" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="zfn-E9-uaV"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="138.40000000000001" y="129.31034482758622"/>
         </scene>
     </scenes>
 </document>
