Set colour on slider thumb and on RGB labels

--- a/GitHub_test/Base.lproj/Main.storyboard
+++ b/GitHub_test/Base.lproj/Main.storyboard
@@ -53,20 +53,26 @@
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Njh-c2-rcT" userLabel="Sliders">
                                                         <rect key="frame" x="0.0" y="0.0" width="283" height="120"/>
                                                         <subviews>
-                                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4Aa-kW-FOb" userLabel="Red">
+                                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="100" minValue="0.0" maxValue="255" translatesAutoresizingMaskIntoConstraints="NO" id="4Aa-kW-FOb" userLabel="Red">
                                                                 <rect key="frame" x="-2" y="0.0" width="287" height="31"/>
+                                                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                <color key="thumbTintColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
                                                                 <connections>
                                                                     <action selector="slidersRGB:" destination="BYZ-38-t0r" eventType="valueChanged" id="rXv-rQ-a0z"/>
                                                                 </connections>
                                                             </slider>
-                                                            <slider opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="oN9-vd-KZa" userLabel="Green">
+                                                            <slider opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="100" minValue="0.0" maxValue="255" translatesAutoresizingMaskIntoConstraints="NO" id="oN9-vd-KZa" userLabel="Green">
                                                                 <rect key="frame" x="-2" y="45" width="287" height="31"/>
+                                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <color key="thumbTintColor" name="systemGreenColor" catalog="System" colorSpace="catalog"/>
                                                                 <connections>
                                                                     <action selector="slidersRGB:" destination="BYZ-38-t0r" eventType="valueChanged" id="dcF-EU-RRA"/>
                                                                 </connections>
                                                             </slider>
-                                                            <slider opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="rGf-u6-wak" userLabel="Blue">
+                                                            <slider opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="100" minValue="0.0" maxValue="255" translatesAutoresizingMaskIntoConstraints="NO" id="rGf-u6-wak" userLabel="Blue">
                                                                 <rect key="frame" x="-2" y="90" width="287" height="31"/>
+                                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <color key="thumbTintColor" name="systemBlueColor" catalog="System" colorSpace="catalog"/>
                                                                 <connections>
                                                                     <action selector="slidersRGB:" destination="BYZ-38-t0r" eventType="valueChanged" id="r0G-Rp-ofe"/>
                                                                 </connections>
@@ -90,19 +96,19 @@
                                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="WRV-ms-Dh6"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <nil key="textColor"/>
+                                                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="34" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pUT-su-0dE">
                                                                 <rect key="frame" x="0.0" y="46" width="40" height="28"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <nil key="textColor"/>
+                                                                <color key="textColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="58" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hB-Lp-uD4">
                                                                 <rect key="frame" x="0.0" y="92" width="40" height="28"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <nil key="textColor"/>
+                                                                <color key="textColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                         </subviews>
